force-app/main/default/objects/UserActive_Logs__c/UserActive_Logs__c.object-meta.xml
<CustomObject>
    <label>UserActive Logs</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>UserActive Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserActive Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>