force-app/main/default/objects/UserActive_Logs__c/fields/ChangedById__c.field-meta.xml
<CustomField>
    <fullName>ChangedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChangedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserActive_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>