force-app/main/default/objects/UserActive_Logs__c/fields/ChangedDate__c.field-meta.xml
<CustomField>
    <fullName>ChangedDate__c</fullName>
    <label>ChangedDate</label>
    <type>DateTime</type>
</CustomField>