force-app/main/default/objects/UserActive_Logs__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>CompanyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>