force-app/main/default/objects/UserActive_Logs__c/fields/UserCreatedById__c.field-meta.xml
<CustomField>
    <fullName>UserCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserCreatedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserActive_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>