force-app/main/default/objects/UserActive_Logs__c/fields/UserCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>UserCreatedDate__c</fullName>
    <label>UserCreatedDate</label>
    <type>DateTime</type>
</CustomField>