force-app/main/default/objects/UserActive_Logs__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserActive_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>